// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItemIcon/> should have the right class names when the position is left 1`] = `
<svg
  aria-hidden={true}
  className="slds-icon slds-icon_x-small slds-icon-text-default slds-m-right_small"
  style={Object {}}
>
  <use
    xlinkHref="/icons/utility-sprite/svg/symbols.svg#user"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`<MenuItemIcon/> should have the right class names when the position is right 1`] = `
<svg
  aria-hidden={true}
  className="slds-icon slds-icon_x-small slds-icon-text-default slds-m-left_small slds-shrink-none"
  style={Object {}}
>
  <use
    xlinkHref="/icons/utility-sprite/svg/symbols.svg#user"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;
